--- a/themes/nightfall/layouts/_default/single.html
+++ b/themes/nightfall/layouts/_default/single.html
@@ -7,8 +7,8 @@
     <h1>{{ .Title }}</h1>
     {{ if .Params.feature_image }}
   <div class="post-feature-image">
-    <img src="{{ .Params.feature_image }}" alt="{{ .Title }}" loading="lazy" />
-  </div>
+  <img src="{{ .Params.feature_image | absURL }}" alt="{{ .Title }}" loading="lazy" />
+</div>
 {{ end }}
 
     {{ if .Description}}
